name:               monad-control
version:            1.0.4
synopsis:
  Lift control operations, like exception catching, through monad transformers

license:            BSD3
license-file:       LICENSE
author:             Bas van Dijk, Anders Kaseorg
maintainer:
  Oleg Grenrus <oleg.grenrus@iki.fi>, Bas van Dijk <v.dijk.bas@gmail.com>

copyright:          (c) 2011 Bas van Dijk, Anders Kaseorg
homepage:           https://github.com/basvandijk/monad-control
bug-reports:        https://github.com/basvandijk/monad-control/issues
category:           Control
build-type:         Simple
cabal-version:      1.12
description:
  This package defines the type class @MonadBaseControl@, a subset of
  @MonadBase@ into which generic control operations such as @catch@ can be
  lifted from @IO@ or any other base monad. Instances are based on monad
  transformers in @MonadTransControl@, which includes all standard monad
  transformers in the @transformers@ library except @ContT@.
  .
  See the <http://hackage.haskell.org/package/lifted-base lifted-base>
  package which uses @monad-control@ to lift @IO@
  operations from the @base@ library (like @catch@ or @bracket@) into any monad
  that is an instance of @MonadBase@ or @MonadBaseControl@.
  .
  Note that this package is a rewrite of Anders Kaseorg's @monad-peel@
  library. The main difference is that this package provides CPS style operators
  and exploits the @RankNTypes@ and @TypeFamilies@ language extensions to
  simplify and speedup most definitions.

extra-source-files:
  CHANGELOG
  README.markdown

tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.4
   || ==9.4.2

--------------------------------------------------------------------------------

source-repository head
  type:     git
  location: git://github.com/basvandijk/monad-control.git

--------------------------------------------------------------------------------

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Control.Monad.Trans.Control
  build-depends:
      base                 >=4.13    && <5
    , stm                  >=2.5.0.0 && <2.6
    , transformers         >=0.6.0.0 && <0.7
    , transformers-base    >=0.4.6   && <0.5
--    , transformers-compat  >=0.6.1 && <0.8
